--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TeerKung's Social Media'</title>
-  <script src="https://cdn.discordapp.com/attachments/1231644472496881724/1372530668361351198/IMG_20250425_132128_642.webp?ex=68271c4b&is=6825cacb&hm=9fda5d2e18c84df3bd2ebe77b601c92132bf10d3ff6a4d9706f3c65ed55b8450&"></script>
+  <title>My Social Links</title>
+  <script src="https://cdn.tailwindcss.com/3.4.16"></script>
   <style>
     .glow {
       transition: border 0.3s, box-shadow 0.3s;
@@ -43,8 +43,8 @@
 </head>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen">
   <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-sm w-full text-center">
-    <img src="https://cdn.discordapp.com/attachments/1231644472496881724/1372530668361351198/IMG_20250425_132128_642.webp?ex=68271c4b&is=6825cacb&hm=9fda5d2e18c84df3bd2ebe77b601c92132bf10d3ff6a4d9706f3c65ed55b8450&" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-white-900">
-    <h1 class="text-2xl font-bold text-white mb-2">TeerKung</h1>
+    <img src="https://cdn.discordapp.com/attachments/1231644472496881724/1372541124249391144/65cef65371a0871e.jpg?ex=68272608&is=6825d488&hm=810b52c3699d354082002478d72e5a07e0f05ac56fcfc20d9cdbe88d34a4c079&" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-violet-300">
+    <h1 class="text-2xl font-bold text-purple-400 mb-2">TeerKung</h1>
     <p class="text-gray-400 mb-6">นี่คือ Social Media ของ TeerKung สามารถเปิดดูช่องต่าง ๆ ได้เลย ^^</p>
 
     <div class="space-y-4">
@@ -67,6 +67,9 @@
       <a href="https://ezdn.app/TeerKung" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow donate-btn">
         Easy Donate
+        <a href="https://discord.gg/8wnDCSp" target="_blank"
+         class="block bg-black text-white py-2 px-4 rounded-xl text-center glow donate-btn">
+        Friend's Discord Server
       </a>
     </div>
   </div>
