--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a href="https://ezdn.app/TeerKung" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow donate-btn">
         Easy Donate
-        <a href="https://discord.gg/8wnDCSp" target="_blank"
+        <a href="https://discord.gg/8wnDCSpnWR" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow donate-btn">
         Friend's Discord Server
       </a>
