--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     }
   </style>
 </head>
-<body class="bg-gray-900 flex items-center justify-center min-h-screen">
-  <div class="bg-gray-800 rounded-2xl shadow-lg p-8 max-w-sm w-full text-center">
-    <img src="https://cdn.discordapp.com/attachments/1231644472496881724/1372541124249391144/65cef65371a0871e.jpg?ex=68272608&is=6825d488&hm=810b52c3699d354082002478d72e5a07e0f05ac56fcfc20d9cdbe88d34a4c079&" alt="Profile" class="w-24 h-24 rounded-full mx-auto mb-4 border-2 border-violet-300">
-    <h1 class="text-2xl font-bold text-purple-400 mb-2">TeerKung</h1>
-    <p class="text-gray-400 mb-6">นี่คือ Social Media ของ TeerKung สามารถเปิดดูช่องต่าง ๆ ได้เลย ^^</p>
+<body class="bg-gray-900 flex items-center justify-center min-h-screen px-4">
+  <div class="bg-gray-800 rounded-2xl shadow-lg p-6 sm:p-8 w-full max-w-sm sm:max-w-md md:max-w-lg lg:max-w-xl text-center">
+    <img src="https://cdn.discordapp.com/attachments/1231644472496881724/1372541124249391144/65cef65371a0871e.jpg?ex=68272608&is=6825d488&hm=810b52c3699d354082002478d72e5a07e0f05ac56fcfc20d9cdbe88d34a4c079&" alt="Profile" class="w-24 h-24 sm:w-28 sm:h-28 rounded-full mx-auto mb-4 border-2 border-violet-300">
+    <h1 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-2">TeerKung</h1>
+    <p class="text-gray-400 mb-6 text-sm sm:text-base">นี่คือ Social Media ของ TeerKung สามารถเปิดดูช่องต่าง ๆ ได้เลย ^^</p>
 
     <div class="space-y-4">
       <a href="https://www.youtube.com/@TeerKungChannel" target="_blank"
@@ -68,7 +68,8 @@
       <a href="https://ezdn.app/TeerKung" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow donate-btn">
         Easy Donate
-        <a href="https://discord.gg/8wnDCSpnWR" target="_blank"
+      </a>
+      <a href="https://discord.gg/8wnDCSpnWR" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow donate-btn">
         Friend's Discord Server
       </a>
