--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpg" href="image.jpg">
+  <link rel="icon" type="image/jpg" href="TeerKung Ch._20250802_223945_0000.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TeerKung's Media</title>
   <script src="https://cdn.tailwindcss.com/3.4.16"></script>
