--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body class="bg-gray-900 flex items-center justify-center min-h-screen px-4">
   <div class="bg-gray-800 rounded-2xl shadow-lg p-6 sm:p-8 w-full max-w-sm sm:max-w-md md:max-w-lg lg:max-w-xl text-center">
-    <img src="https://cdn.discordapp.com/attachments/1231644472496881724/1372541124249391144/65cef65371a0871e.jpg?ex=68272608&is=6825d488&hm=810b52c3699d354082002478d72e5a07e0f05ac56fcfc20d9cdbe88d34a4c079&" alt="Profile" class="w-24 h-24 sm:w-28 sm:h-28 rounded-full mx-auto mb-4 border-2 border-violet-300">
+    <img src="TeerKung Ch._20250802_223945_0000.png" alt="Profile" class="w-24 h-24 sm:w-28 sm:h-28 rounded-full mx-auto mb-4 border-2 border-violet-300">
     <h1 class="text-2xl sm:text-3xl font-bold text-purple-400 mb-2">TeerKung</h1>
     <p class="text-gray-400 mb-6 text-sm sm:text-base">นี่คือ Social Media ของ TeerKung สามารถเปิดดูช่องต่าง ๆ ได้เลย ^^</p>
 
