--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow yt-btn">
         YouTube
       </a>
-      <a href="https://www.tiktok.com/@teerkungch_?_t=ZS-8wNH3a4nHYF&_r=1" target="_blank"
+      <a href="https://www.tiktok.com/@teerkungch._?_t=ZS-8yavhgb7E7G&_r=1" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow tiktok-btn">
         TikTok
       </a>
-      <a href="https://twitter.com/@teerkung_" target="_blank"
+      <a href="https://twitter.com/@teerkungch" target="_blank"
          class="block bg-black text-white py-2 px-4 rounded-xl text-center glow x-btn">
         X (Twitter)
       </a>
